[project]
name = "real-estate-investment-analyst-ai-agent"
version = "0.1.0"
description = "AI agent system for automating real estate investment analysis with cap rate calculations, comparable property research, and investment recommendations"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai>=1.54.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
    "jupyter>=1.1.1",
    "openai-agents>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 88
target-version = ["py313"]

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
